k8s/manifests/ingress-new/zikanwari-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zikanwari-basic
  namespace: zikanwari
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: zikan-auth
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: zikanwari.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zikanwari
            port:
              number: 80
  tls:
  - hosts:
    - zikanwari.f5.si
    secretName: zikanwari-tls
